# langchain_course

./: CLAUDE.md  main.py  pyproject.toml
docs/: notes.md
src/: hello_world.py  hello_world_advanced.py
src/tema_1/: streamlit_chatbot.py
